Misread the requirements and saw that you only needed to handle number of items and price per item, so I updated the tests, they started failing. I applied some fixes, ran the tests, everything passed. Then I ran the application and it worked like a champ!!